--- a/Programa.html
+++ b/Programa.html
@@ -1,10 +1,10 @@
 <html>
-	<title>Prueba</title>
+	<title>Titulo</title>
 	<body>
-		<p>Esto es una prueba</p>
-		<p>Agregando un nuevo parrafo</p>
-
-		<img src="asdadf" alt="">
-		<p>Nueva data</p>
+		<p>ASDasd</p>
+		<p>dasdada</p>
+		
+		<img src="img/portada.jpg" alt="Portada del sitio">
+		<p>Data vieja</p>
 	</body>
 </html>
