Cambio de otro(s)

--- a/Programa.html
+++ b/Programa.html
@@ -1,10 +1,10 @@
 <html>
-	<title>Prueba</title>
+	<title>Otro Titulo</title>
 	<body>
-		<p>Esto es una prueba</p>
-		<p>Agregando un nuevo parrafo</p>
+		<p>Esto es otra prueba</p>
+		<p>Agregando otro nuevo parrafo</p>
 
-		<img src="asdadf" alt="">
-		<p>Nueva data</p>
+		<img src="img/pruba.jpg" alt="">
+		<p>Otro Nueva data</p>
 	</body>
 </html>
